# analyzer

./: .gitignore  AI_SYSTEM_FULLSTACK_BRIEFING.md  CRITICAL_BUG_REPORT.md  Check-System-Simple.ps1  Check-System.ps1  Dockerfile  FULLSTACK_DEVELOPER_BRIEFING.md  LICENSE  MIGRATION_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  TEST_INSTRUCTIONS.md  docker-compose.yml  env.example  fixed_real_processor.py  pyproject.toml  real_production_processor.py  setup_lm_studio.py  start_continuous_processor.py  start_jarvis.py  test_batch_processing.py  test_connections.py  test_continuous_processor.py  test_integration.py  test_lm_studio_connection.py  test_ocr_quality.py  test_quick_continuous.py  test_quick_processing.py  test_real_educational_content.py  test_simple_start.py  test_system.py  web_dashboard.py
archive_old_processors/: README.md  advanced_content_processor.py  advanced_processor.py  create_advanced_processor.py  fixed_mega_processor.py  hybrid_final.py  mega_processor.py  polish_only_processor.py  test_simple_processor.py  ultra_simple_processor.py
config/: auto-mode.yaml  continuous_processor.yaml
examples/: auto_mode_example.py
jarvis_edu/: __init__.py  auto_mode.py
jarvis_edu/api/: __init__.py  dashboard.py
jarvis_edu/cli/: __init__.py  main.py
jarvis_edu/core/: __init__.py  auto_config.py  config.py  config_loader.py  logger.py  system_paths.py
jarvis_edu/extractors/: __init__.py  audio_extractor.py  base_extractor.py  enhanced_audio_extractor.py  enhanced_image_extractor.py  enhanced_video_extractor.py  image_extractor.py  video_extractor.py
jarvis_edu/pipeline/: __init__.py  auto_processor.py  continuous_processor.py
jarvis_edu/processors/: __init__.py  lm_studio.py
jarvis_edu/storage/: __init__.py  database.py  knowledge_base.py
jarvis_edu/watcher/: __init__.py  folder_monitor.py
templates/: report.html
test_results/: system_test_report.json
tests/: __init__.py  test_config.py  test_models.py
